Fix android issues - Resolve an issue where the screen ratio was too big - Resolve an issue where the font wasn't loading

--- a/assets/app.scss
+++ b/assets/app.scss
@@ -1,6 +1,8 @@
 @font-face {
+  font-display: swap;
   font-family: "starjedi";
-  src: url("assets/starjedi.ttf");
+  src: url("assets/starjedi.woff2") format("woff2"),
+       url("assets/starjedi.woff") format("woff");
 }
 
 /* Make the pixi canvas full screen */
